--- a/references.bib
+++ b/references.bib
@@ -9,3 +9,59 @@
   title = {Global patterns of resilience decline in vertebrate populations},
   journal = {Ecology Letters},
 }
+
+@Article{Daskalova_2020,
+  doi = {10.1126/science.aba1289},
+  url = {https://doi.org/10.1126/science.aba1289},
+  year = {2020},
+  month = {jun},
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+  volume = {368},
+  number = {6497},
+  pages = {1341--1347},
+  author = {Gergana N. Daskalova and Isla H. Myers-Smith and Anne D. Bjorkman and Shane A. Blowes and Sarah R. Supp and Anne E. Magurran and Maria Dornelas},
+  title = {Landscape-scale forest loss as a catalyst of population and biodiversity change},
+  journal = {Science},
+}
+
+@Article{Dennis_1994,
+  doi = {10.2307/2937041},
+  url = {https://doi.org/10.2307/2937041},
+  year = {1994},
+  month = {may},
+  publisher = {Wiley},
+  volume = {64},
+  number = {2},
+  pages = {205--224},
+  author = {Brian Dennis and Mark L. Taper},
+  title = {Density Dependence in Time Series Observations of Natural Populations: Estimation and Testing},
+  journal = {Ecological Monographs},
+}
+
+@Article{Holmes_2001,
+  doi = {10.1073/pnas.081055898},
+  url = {https://doi.org/10.1073/pnas.081055898},
+  year = {2001},
+  month = {apr},
+  publisher = {Proceedings of the National Academy of Sciences},
+  volume = {98},
+  number = {9},
+  pages = {5072--5077},
+  author = {E. E. Holmes},
+  title = {Estimating risks in declining populations with poor data},
+  journal = {Proceedings of the National Academy of Sciences},
+}
+
+@Article{Loh_2005,
+  doi = {10.1098/rstb.2004.1584},
+  url = {https://doi.org/10.1098/rstb.2004.1584},
+  year = {2005},
+  month = {feb},
+  publisher = {The Royal Society},
+  volume = {360},
+  number = {1454},
+  pages = {289--295},
+  author = {Jonathan Loh and Rhys E Green and Taylor Ricketts and John Lamoreux and Martin Jenkins and Valerie Kapos and Jorgen Randers},
+  title = {The Living Planet Index: using species population time series to track trends in biodiversity},
+  journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+}
